changed the files to the correct type

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Joe Tang's personal site home</title>
+        <title>349 final project</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,35 +12,43 @@
 
         <!-- External link (relative) to your javascript file -->
         <script src="js/index.js"></script>
+		<!-- font awesome stuff -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-    <body>
-	<a href="index.html"><img src="images/Banner1.png" alt="Test_Banner"></a>
-	<header class="header">
-		<nav>
-			<br>
-			<ul class="navigation">
-				<li class="a"><a href="index.html">Home</a></li>
-				<li class="a"><a href="info1.html">More Information</a></li>
-				<li class="a"><a href="info2.html">Favorite Games</a></li>
-				<li class="a"><a href="info3.html">Favorite Quotes</a></li>
-			</ul>
-		</nav>
-	</header>
-	<div class="content">
-		<section>
-			<div class="showbox slideright">
-				<img class="cusimg" src="images/14311359_1341985699146769_4265661505566181637_o.jpg" alt="funnypicture">
+    <body class="wrapper">
+        <!-- Add your site content here -->
+        <!-- Relative URL image link example -->
+	<header class="flex-container">
+		<a href="index.html"><img src="images/Banner1.png" alt="Test_Banner"></a>
+		<div class="namecard">
+			<img class="nameimg" src="images/headshot.jpg" alt="headshot">
+			<div class="namecontent">
+				<h4>Links</h4>
+					<div class="popup" onclick="mailingpopout()">
+						<i class="fa fa-address-book" aria-hidden="true"></i>
+						<span class="popuptext" id="mailing">Mailing Address: Joseph Tang <br>
+		Permanent: 148 Streamview Dr, Troy MI 48085 <br>
+		Current: shaw address here</span>
+					</div>
+					<a href="https://github.com/derpachu" target= "_blank"><i class="fa fa-github"></i></a>
+					<div class="popup" onclick="emailpopout()">
+						<i class="fa fa-envelope" aria-hidden="true"></i>
+						<span class="popuptext" id="email">tangjos1@msu.edu</span>
+					</div>
 			</div>
-			<br>
-			<h1>Previous and current experience</h1>
-				<ul class="b"><li>Media Lead for First Team 226</li>
-				<li>Committee Chair for Canadian American Security Council</li></ul>
-			<h1>Contact Information</h1>
-				<ul class="b"><li>Joe Tang</li>
-				<li>Email: Tangjos1@msu.edu</li>
-				<li>Github: <a href="https://github.com/derpachu" target=”_blank”>https://github.com/derpachu</a></li></ul>
-		</section>
-	</div>
+		</div>
+	</header>
+	<ul class="flex-container">
+		<li class="flex-item"><div class="my-div1">
+			<a href="info1.html" class="fill-div"><h3 class="h3a">Professional</h3></a>
+		</div></li>
+		<li class="flex-item"><div class="my-div2"><div class="my-div2">
+			<a href="info2.html" class="fill-div"><h3 class="h3b">Personal</h3></a>
+		</div></div></li>
+		<li class="flex-item"><div class="my-div3"><div class="my-div3">
+			<a href="info3.html" class="fill-div"><h3 class="h3c">Media</h3></a>
+		</div></div></li>
+	</ul>
 	<footer class="footer">
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a>
 		<p>Copyright &copy; 2016 Joe Tang. All rights reserved.</p>
