--- a/info3.html
+++ b/info3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Quotes</title>
+        <title>Media</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,33 +12,78 @@
 
         <!-- External link (relative) to your javascript file -->
         <script src="js/index.js"></script>
+		<!-- font awesome stuff -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-	<a href="index.html"><img src="images/Banner1.png" alt="Test_Banner"></a>
-	<header class="header">
+		<header class="header">
+		<div class="namecard">
+			<img class="nameimg" src="images/headshot.jpg" alt="headshot">
+			<div class="namecontent">
+				<h4>Links</h4>
+					<div class="popup" onclick="mailingpopout()">
+						<i class="fa fa-address-book" aria-hidden="true"></i>
+						<span class="popuptext" id="mailing">Mailing Address: Joseph Tang <br>
+		Permanent: 148 Streamview Dr, Troy MI 48085 <br>
+		Current: shaw address here</span>
+					</div>
+					<a href="https://github.com/derpachu" target= "_blank"><i class="fa fa-github"></i></a>
+					<div class="popup" onclick="emailpopout()">
+						<i class="fa fa-envelope" aria-hidden="true"></i>
+						<span class="popuptext" id="email">tangjos1@msu.edu</span>
+					</div>
+			</div>
+		</div>
 		<nav>
 			<br>
 			<ul class="navigation">
 				<li class="a"><a href="index.html">Home</a></li>
-				<li class="a"><a href="info1.html">More Information</a></li>
-				<li class="a"><a href="info2.html">Favorite Games</a></li>
-				<li class="a"><a href="info3.html">Favorite Quotes</a></li>
+				<li class="a"><a href="info1.html">Professional</a></li>
+				<li class="a"><a href="info2.html">Personal</a></li>
+				<li class="a"><a href="info3.html">Media</a></li>
 			</ul>
 		</nav>
-	</header>
-	<div class="content">
-		<section>
-		<h3>Favorite Quotes</h3>
-			<ol><li>"So it depends not upon man's will or exertion, but upon God's mercy. " Romans Chapter 9 Verse 16</li>
-			<li>“It is not advisable to venture unsolicited opinions. You should spare yourself the embarrassing discovery of their exact value to your listener.” -Atlas Shrugged</li>
-			<li>“I hate people telling me how to do my job, whoops that should have read, I hate people telling me to do my job.” -Ben Croshaw</li>
-			<li>“A national figure in a way, one of those men who reach such an acute limited excellence at twenty-one that everything afterward savors of anti-climax.” -Great Gatsby</li>
-			<li>“And while the law has many penalties for the atrocities we inflict on others, there are no punishments for the terrors that we inflict on ourselves.” -Red vs Blue</li></ol>
-    	</section>
-	</div>
+		</header>
+		<div class="flex-container">
+		<div class="flex-item">
+			<div class="my-div6">
+			<section>
+				<h1>Social Media</h1>
+				<table>
+					<tr>
+						<th>Youtube</th>
+						<td><a href="https://www.youtube.com/channel/UCj3fhPpI0qR87D5RygRFwjQ" target= "_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i> my youtube channel</a></td>
+					</tr>
+					<tr>
+						<th>Facebook</th>
+						<td><a href="https://www.facebook.com/derpachu" target= "_blank"><i class="fa fa-facebook-official" aria-hidden="true"> my facebook</i></a></td>
+					</tr>
+				</table>
+				<h1>Gaming Information</h1>
+				<table>
+					<tr>
+						<th>League of Legends</th>
+						<td>ign: bleblabla</td>
+						<td>Rank: Gold V</td>
+					</tr>
+					<tr>
+						<th>Blizzard</th>
+						<td>ign: DastardlyDVS#1378</td>
+						<td>Overwatch: 2236</td>
+					</tr>
+					<tr>
+						<th>Steam</th>
+						<td>ign: bleblabla</td>
+						<td><a href="http://steamcommunity.com/id/lawlbawl/" target= "_blank">Profile</a>
+					</tr>
+				</table>
+			</section>
+			</div>
+		</div>
+		</div>
 	<footer class="footer">
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a>
 		<p>Copyright &copy; 2016 Joe Tang. All rights reserved.</p>
-	</footer>
+	</footer>    
 	</body>
 </html>
