--- a/info1.html
+++ b/info1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Books</title>
+        <title>Professional</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,33 +12,61 @@
 
         <!-- External link (relative) to your javascript file -->
         <script src="js/index.js"></script>
+		<!-- font awesome stuff -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-	<a href="index.html"><img src="images/Banner1.png" alt="Test_Banner"></a>
-	<header class="header">
+		<header class="header">
+		<div class="namecard">
+			<img class="nameimg" src="images/headshot.jpg" alt="headshot">
+			<div class="namecontent">
+				<h4>Links</h4>
+					<div class="popup" onclick="mailingpopout()">
+						<i class="fa fa-address-book" aria-hidden="true"></i>
+						<span class="popuptext" id="mailing">Mailing Address: Joseph Tang <br>
+		Permanent: 148 Streamview Dr, Troy MI 48085 <br>
+		Current: shaw address here</span>
+					</div>
+					<a href="https://github.com/derpachu" target= "_blank"><i class="fa fa-github"></i></a>
+					<div class="popup" onclick="emailpopout()">
+						<i class="fa fa-envelope" aria-hidden="true"></i>
+						<span class="popuptext" id="email">tangjos1@msu.edu</span>
+					</div>
+			</div>
+		</div>
 		<nav>
 			<br>
 			<ul class="navigation">
 				<li class="a"><a href="index.html">Home</a></li>
-				<li class="a"><a href="info1.html">More Information</a></li>
-				<li class="a"><a href="info2.html">Favorite Games</a></li>
-				<li class="a"><a href="info3.html">Favorite Quotes</a></li>
+				<li class="a"><a href="info1.html">Professional</a></li>
+				<li class="a"><a href="info2.html">Personal</a></li>
+				<li class="a"><a href="info3.html">Media</a></li>
 			</ul>
 		</nav>
-	</header>
-	<div class="content">
-		<section>
-			<h3>Favorite Books</h3>
-				<ol><li>Ender’s Game</li>
-				<li>Atlas Shrugged</li>
-				<li>Starship Troopers</li>
-				<li>A Short History of Nearly Everything</li>
-				<li>Made to Stick</li></ol>
-		</section>
-	</div>
-	<footer class="footer">
-		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a>
-		<p>Copyright &copy; 2016 Joe Tang. All rights reserved.</p>
-	</footer>
+		</header>
+		<div class="flex-container">
+			<section>
+			<div class="flex-itemsub">
+				<div class="my-div4">
+					<h3>Resume</h3>
+					<object width="600" height="800" data="images/Resume2017.pdf"></object>
+				</div>
+			</div>
+			<div class="flex-itemsub">
+				<div class="my-div4">
+					<h3>Portfolio of past work</h3>
+					<a href="https://github.com/derpachu" target= "_blank"><i class="fa fa-github"> Github Repository</i></a>
+					<a href="https://www.youtube.com/watch?v=gdfLKAnh0Tk" target= "_blank"><i class="fa fa-youtube-play" aria-hidden="true"> animation with skeleton</i></a>
+					<a href="https://www.youtube.com/watch?v=XQvdt2R7v7w" target= "_blank"><i class="fa fa-youtube-play" aria-hidden="true"> animation without skeleton</i></a>
+				</div>
+			</div>
+			<!-- removed due to causing errors -->
+			<!-- <iframe src="https://calendar.google.com/calendar/embed?src=kiha7imnjv7nj7v0d667lhgk28%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe> -->
+			</section>
+		</div>
+		<footer class="footer">
+			<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a>
+			<p>Copyright &copy; 2016 Joe Tang. All rights reserved.</p>
+		</footer>
     </body>
 </html>
