--- a/info2.html
+++ b/info2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Games</title>
+        <title>Personal</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,32 +12,76 @@
 
         <!-- External link (relative) to your javascript file -->
         <script src="js/index.js"></script>
+		<!-- font awesome stuff -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-	<a href="index.html"><img src="images/Banner1.png" alt="Test_Banner"></a>
-	<header class="header">
+		<header class="header">
+		<div class="namecard">
+			<img class="nameimg" src="images/headshot.jpg" alt="headshot">
+			<div class="namecontent">
+				<h4>Links</h4>
+					<div class="popup" onclick="mailingpopout()">
+						<i class="fa fa-address-book" aria-hidden="true"></i>
+						<span class="popuptext" id="mailing">Mailing Address: Joseph Tang <br>
+		Permanent: 148 Streamview Dr, Troy MI 48085 <br>
+		Current: shaw address here</span>
+					</div>
+					<a href="https://github.com/derpachu" target= "_blank"><i class="fa fa-github"></i></a>
+					<div class="popup" onclick="emailpopout()">
+						<i class="fa fa-envelope" aria-hidden="true"></i>
+						<span class="popuptext" id="email">tangjos1@msu.edu</span>
+					</div>
+			</div>
+		</div>
 		<nav>
 			<br>
 			<ul class="navigation">
 				<li class="a"><a href="index.html">Home</a></li>
-				<li class="a"><a href="info1.html">More Information</a></li>
-				<li class="a"><a href="info2.html">Favorite Games</a></li>
-				<li class="a"><a href="info3.html">Favorite Quotes</a></li>
+				<li class="a"><a href="info1.html">Professional</a></li>
+				<li class="a"><a href="info2.html">Personal</a></li>
+				<li class="a"><a href="info3.html">Media</a></li>
 			</ul>
 		</nav>
-	</header>
-		<div class="content">
-			<section>
-				<h3>Favorite Games</h3>
-					<ol><li>Civilization</li>
-					<li>Xcom</li>
-					<li>League of Legends</li>
-					<li>Overwatch</li></ol>
-			</section>
+		</header>
+		<div class="flex-container">
+		<div class="flex-item">
+			<div class="my-div5">
+				<ul style="display: inline-block; text-align: left">
+				<li class="second">future projects list (in no particular order)</li>
+					<li><ul class="a">
+					<li>revise previous projects to be updated</li>
+					<li>game project</li>
+					<li>caravan app project</li>
+					<li>study life insurance policy</li>
+					</ul></li>
+				<li class="second">interesting sites</li>
+					<li><ul class="b">
+					<li><a href="http://waitbutwhy.com/" target= "_blank">waitbutwhy</a></li>
+					<li><a href="http://owlturd.com/" target= "_blank">owlturd web comic</a></li>
+					<li><a href="https://game-development.zeef.com/david.arcila" target= "_blank">game development assets</a></li>
+					<li><a href="http://www.datasciencecentral.com/profiles/blogs/20-data-science-r-python-excel-and-machine-learning-cheat-sheets" target= "_blank">cheatsheet</a></li>
+					</ul></li>
+				<li class="second">goals</li>
+					<li><ul class="c">
+					<li>learn R</li>
+					<li>learn ruby (on rails)</li>
+					<li>master C++/python</li>
+					<li>get licensed to sell insurance</li>
+					</ul></li>
+				<li class="second">wishlist</li>
+					<li><ul class="d">
+					<li>get new wireless headphones</li>
+					<li>speaker system</li>
+					<li>a job</li>
+					</ul></li>
+				</ul>
+			</div>
+		</div>
 		</div>
 	<footer class="footer">
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a>
 		<p>Copyright &copy; 2016 Joe Tang. All rights reserved.</p>
 	</footer>
-    </body>
+	</body>
 </html>
