--- a/Media/index.html
+++ b/Media/index.html
@@ -8,17 +8,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- External link (relative) to your main stylesheet -->
-        <link rel="stylesheet" href="css/screen.css">
+        <link rel="stylesheet" href="../css/screen.css">
 
         <!-- External link (relative) to your javascript file -->
-        <script src="js/index.js"></script>
+        <script src="../js/index.js"></script>
 		<!-- font awesome stuff -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
 		<header class="header">
 		<div class="namecard">
-			<img class="nameimg" src="images/headshot.jpg" alt="headshot">
+			<img class="nameimg" src="../images/headshot.jpg" alt="headshot">
 			<div class="namecontent">
 				<h4>Links</h4>
 					<div class="popup" onclick="mailingpopout()">
@@ -37,10 +37,10 @@
 		<nav>
 			<br>
 			<ul class="navigation">
-				<li class="a"><a href="index.html">Home</a></li>
-				<li class="a"><a href="info1.html">Professional</a></li>
-				<li class="a"><a href="info2.html">Personal</a></li>
-				<li class="a"><a href="info3.html">Media</a></li>
+				<li class="a"><a href="../index.html">Home</a></li>
+				<li class="a"><a href="../Professional/index.html">Professional</a></li>
+				<li class="a"><a href="../Personal/index.html">Personal</a></li>
+				<li class="a"><a href="index.html">Media</a></li>
 			</ul>
 		</nav>
 		</header>
@@ -74,7 +74,7 @@
 					<tr>
 						<th>Steam</th>
 						<td>ign: bleblabla</td>
-						<td><a href="http://steamcommunity.com/id/lawlbawl/" target= "_blank">Profile</a>
+						<td><a href="http://steamcommunity.com/id/lawlbawl/" target= "_blank">Profile</a></td>
 					</tr>
 				</table>
 			</section>
@@ -84,6 +84,6 @@
 	<footer class="footer">
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a>
 		<p>Copyright &copy; 2016 Joe Tang. All rights reserved.</p>
-	</footer>    
+	</footer>
 	</body>
 </html>
