preparing for sass converstion

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 	</header>
 	<ul class="flex-container">
 		<li class="flex-item"><div class="my-div1">
-			<a href="Professional/index.html" class="fill-div"><h3 class="h3a">Professional</h3></a>
+			<a href="pages/Professional/index.html" class="fill-div"><h3 class="h3a">Professional</h3></a>
 		</div></li>
 		<li class="flex-item"><div class="my-div2"><div class="my-div2">
-			<a href="Personal/index.html" class="fill-div"><h3 class="h3b">Personal</h3></a>
+			<a href="pages/Personal/index.html" class="fill-div"><h3 class="h3b">Personal</h3></a>
 		</div></div></li>
 		<li class="flex-item"><div class="my-div3"><div class="my-div3">
-			<a href="Media/index.html" class="fill-div"><h3 class="h3c">Media</h3></a>
+			<a href="pages/Media/index.html" class="fill-div"><h3 class="h3c">Media</h3></a>
 		</div></div></li>
 	</ul>
 	<footer class="footer">
