--- a/pages/Personal/index.html
+++ b/pages/Personal/index.html
@@ -37,9 +37,8 @@
 		<nav>
 			<br>
 			<ul class="navigation">
-				<li class="a"><a href="../index.html">Home</a></li>
+				<li class="a"><a href="../../index.html">Home</a></li>
 				<li class="a"><a href="../Professional/index.html">Professional</a></li>
-				<li class="a"><a href="index.html">Personal</a></li>
 				<li class="a"><a href="../Media/index.html">Media</a></li>
 			</ul>
 		</nav>
@@ -66,13 +65,10 @@
 					<li><ul class="c">
 					<li>learn R</li>
 					<li>learn ruby (on rails)</li>
-					<li>master C++/python</li>
 					<li>get licensed to sell insurance</li>
 					</ul></li>
 				<li class="second">wishlist</li>
 					<li><ul class="d">
-					<li>get new wireless headphones</li>
-					<li>speaker system</li>
 					<li>a job</li>
 					</ul></li>
 				</ul>
