--- a/pages/Professional/index.html
+++ b/pages/Professional/index.html
@@ -8,17 +8,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- External link (relative) to your main stylesheet -->
-        <link rel="stylesheet" href="../css/screen.css">
+        <link rel="stylesheet" href="../../css/screen.css">
 
         <!-- External link (relative) to your javascript file -->
-        <script src="../js/index.js"></script>
+        <script src="../../js/index.js"></script>
 		<!-- font awesome stuff -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
 		<header class="header">
 		<div class="namecard">
-			<img class="nameimg" src="../images/headshot.jpg" alt="headshot">
+			<img class="nameimg" src="../../images/headshot.jpg" alt="headshot">
 			<div class="namecontent">
 				<h4>Links</h4>
 					<div class="popup" onclick="mailingpopout()">
