--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- External link (relative) to your main stylesheet -->
-        <link rel="stylesheet" href="css/screen.css">
+        <!--<link rel="stylesheet" href="css/screen.css">-->
+        <link rel="stylesheet" href="compiled/css/style.css">
 
         <!-- External link (relative) to your javascript file -->
         <script src="js/index.js"></script>
@@ -40,13 +41,13 @@
 	</header>
 	<ul class="flex-container">
 		<li class="flex-item"><div class="my-div1">
-			<a href="pages/Professional/index.html" class="fill-div"><h3 class="h3a">Professional</h3></a>
+			<a href="pages/Professional/index.html" class="fill-div"><h3 class="text1">Professional</h3></a>
 		</div></li>
 		<li class="flex-item"><div class="my-div2"><div class="my-div2">
-			<a href="pages/Personal/index.html" class="fill-div"><h3 class="h3b">Personal</h3></a>
+			<a href="pages/Personal/index.html" class="fill-div"><h3 class="text2">Personal</h3></a>
 		</div></div></li>
 		<li class="flex-item"><div class="my-div3"><div class="my-div3">
-			<a href="pages/Media/index.html" class="fill-div"><h3 class="h3c">Media</h3></a>
+			<a href="pages/Media/index.html" class="fill-div"><h3 class="text3">Media</h3></a>
 		</div></div></li>
 	</ul>
 	<footer class="footer">
